# aoc2025

./: .gitignore  day08.prof  entangled.toml  mkdocs.yml  pyproject.toml
docs/: aa-python.md  aa-scheme-combinators.md  aa-scheme-monads.md  aa-scheme-parsing.md  aa-scheme-utility.md  aa-scheme.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md
src/c3/: day01.c3  day03.c3  day07.c3
src/python/: day01.py  day02.py  day03.py  day03b.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  parsing.py
src/scheme/: day01.scm
src/scheme/monads/: maybe.scm  monads.scm  support.scm  syntax.scm
src/scheme/parsing/: parsing.scm  text-cursors.scm
src/scheme/std/: combinators.scm  cut.scm  format.scm  match.scm  receive.scm  transducers.scm
src/scheme/utility/: algorithms.scm  aux-keyword.scm
