[project]
name = "advent-of-code-2025"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "entangled-cli>=2.4.0",
    "mkdocs-entangled-plugin>=0.5.0",
    "mkdocs-material>=9.7.0",
    "pywatchman>=3.0.0",
]

[tool.uv.sources]
entangled-cli = { path = "../../../../../home/johannes/Projects/entangled/entangled.py", editable = true }

[dependency-groups]
dev = [
    "flameprof>=0.4",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "python-lsp-server>=1.14.0",
]
